# serval_ros_bridge

./: README.md
exiftool_ros/: CMakeLists.txt  package.xml
exiftool_ros/include/exiftool_ros/: exiftool_ros.h
image_to_serval/: CMakeLists.txt  nodelet_plugins.xml  package.xml
image_to_serval/include/image_to_serval/: image_to_serval.h
image_to_serval/launch/: .image_to_serval_nodelet.launch.kate-swp  image_to_serval_node.launch  image_to_serval_nodelet.launch
image_to_serval/src/: image_to_serval.cpp  image_to_serval_node.cpp  image_to_serval_nodelet.cpp
map_to_serval/: CMakeLists.txt  package.xml
map_to_serval/launch/: map_to_serval_local_test.launch
map_to_serval/src/: map_to_serval_node.cpp
serval_msgs/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
serval_msgs/msg/: NewServalFile.msg
serval_ros_launch/: CMakeLists.txt  package.xml
serval_ros_launch/launch/: hector_tracker_arm_cam_images.launch  hector_tracker_main.launch  rosbridge_websocket.launch
serval_to_msg/: CMakeLists.txt  package.xml
serval_to_msg/src/: serval_to_msg_node.cpp
